{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 51,
  "lineage": "aab0f718-9ded-10ed-d7ef-3c5f44501e52",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_server_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fb1304df-9121-48af-b4b5-a297a620249c/resourceGroups/web-rg/providers/Microsoft.Network/networkInterfaces/web-01-nic",
            "internal_domain_name_suffix": "f43kyrcp00xulpialpmidl5f3c.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-01-ip",
                "primary": true,
                "private_ip_address": "1.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fb1304df-9121-48af-b4b5-a297a620249c/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server-subnet"
              }
            ],
            "location": "westus2",
            "name": "web-01-nic",
            "private_ip_address": "1.0.1.4",
            "private_ip_addresses": [
              "1.0.1.4"
            ],
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg",
            "azurerm_subnet.web_server_subnet",
            "azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "web_server_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb1304df-9121-48af-b4b5-a297a620249c/resourceGroups/web-rg/providers/Microsoft.Network/networkInterfaces/web-01-nic|/subscriptions/fb1304df-9121-48af-b4b5-a297a620249c/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg",
            "network_interface_id": "/subscriptions/fb1304df-9121-48af-b4b5-a297a620249c/resourceGroups/web-rg/providers/Microsoft.Network/networkInterfaces/web-01-nic",
            "network_security_group_id": "/subscriptions/fb1304df-9121-48af-b4b5-a297a620249c/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.web_server_nic",
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg",
            "azurerm_subnet.web_server_subnet",
            "azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_server_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb1304df-9121-48af-b4b5-a297a620249c/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg",
            "location": "westus2",
            "name": "web-server-nsg",
            "resource_group_name": "web-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_server_nsg_rule_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/fb1304df-9121-48af-b4b5-a297a620249c/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg/securityRules/RDP Inbound",
            "name": "RDP Inbound",
            "network_security_group_name": "web-server-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "web-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "3389",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_server_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/fb1304df-9121-48af-b4b5-a297a620249c/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-server-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "web-server-public-ip",
            "resource_group_name": "web-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_server_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.1.0/24",
            "address_prefixes": [
              "1.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fb1304df-9121-48af-b4b5-a297a620249c/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server-subnet",
            "name": "web-server-subnet",
            "resource_group_name": "web-rg",
            "virtual_network_name": "web-server-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg",
            "azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "web_server_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "1.0.0.0/22"
            ],
            "guid": "44acba2f-d64f-45af-bd00-5bd881afe5ea",
            "id": "/subscriptions/fb1304df-9121-48af-b4b5-a297a620249c/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet",
            "location": "westus2",
            "name": "web-server-vnet",
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    }
  ]
}